k8s-manifests/pharma-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharma-ui
  namespace: dev
  labels:
    app: pharma-ui
    version: "1.0.0"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "ac9e628161cdf498cb378ef3081ecbb1-e6b42448d6f67c75.elb.ap-south-1.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pharma-ui
            port:
              number: 80
